--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -1,51 +1,62 @@
 .banner
     .banner__img-left
     .banner__info
-        .banner__info-title BONUS #[span 100%] #[br] PÂNĂ LA #[span 1000 LEI]
+        .banner__info-title Bonus na prvi #[br] #[span depozit]
         ul.banner__info-list
-            li.banner__info-item 100 DE LEI PARIU #[br] FĂRĂ RISC
+            li.banner__info-item
+                .banner__info-item-top 100%
+                .banner__info-item-bottom BONUSA NA PRVI #[br] DEPOZIT do 700€
             li.banner__info-item
                 img(src='img/plus.svg' alt='plus')
-            li.banner__info-item 100 ROTIRI #[br] GRATUITE
+            li.banner__info-item
+                .banner__info-item-top 30€
+                .banner__info-item-bottom RISK-FREE BET
+            li.banner__info-item
+                img(src='img/plus.svg' alt='plus')
+            li.banner__info-item
+                .banner__info-item-top 200
+                .banner__info-item-bottom BESPLATNIH #[br] VRTNJI
 
     .banner__img-right
     .banner__marquee
-        ul.banner__marquee-list
-            li.banner__marquee-item 100 DE LEI PARIU #[br] FĂRĂ RISC
-            li.banner__marquee-item
-                img(src='img/plus.svg' alt='plus')
-            li.banner__marquee-item 100 ROTIRI #[br] GRATUITE
-        .banner__marquee-fav
-        ul.banner__marquee-list
-            li.banner__marquee-item 100 DE LEI PARIU #[br] FĂRĂ RISC
-            li.banner__marquee-item
-                img(src='img/plus.svg' alt='plus')
-            li.banner__marquee-item 100 ROTIRI #[br] GRATUITE
-        .banner__marquee-fav
-        ul.banner__marquee-list
-            li.banner__marquee-item 100 DE LEI PARIU #[br] FĂRĂ RISC
-            li.banner__marquee-item
-                img(src='img/plus.svg' alt='plus')
-            li.banner__marquee-item 100 ROTIRI #[br] GRATUITE
-        .banner__marquee-fav
-        ul.banner__marquee-list
-            li.banner__marquee-item 100 DE LEI PARIU #[br] FĂRĂ RISC
-            li.banner__marquee-item
-                img(src='img/plus.svg' alt='plus')
-            li.banner__marquee-item 100 ROTIRI #[br] GRATUITE
-        .banner__marquee-fav
-        ul.banner__marquee-list
-            li.banner__marquee-item 100 DE LEI PARIU #[br] FĂRĂ RISC
-            li.banner__marquee-item
-                img(src='img/plus.svg' alt='plus')
-            li.banner__marquee-item 100 ROTIRI #[br] GRATUITE
-        .banner__marquee-fav
-        ul.banner__marquee-list
-            li.banner__marquee-item 100 DE LEI PARIU #[br] FĂRĂ RISC
-            li.banner__marquee-item
-                img(src='img/plus.svg' alt='plus')
-            li.banner__marquee-item 100 ROTIRI #[br] GRATUITE
-        .banner__marquee-fav
+        .banner__marquee-text 100% BONUSA NA PRVI DEPOZIT do 700 EUR (5274,15kn)
+        .banner__marquee-plus
+        .banner__marquee-text 200 BESPLATNIH VRTNJI
+        .banner__marquee-plus
+        .banner__marquee-text RISK-FREE BET 30 EUR (226,04kn)
+        .banner__marquee-plus
+        .banner__marquee-text 100% BONUSA NA PRVI DEPOZIT do 700 EUR (5274,15kn)
+        .banner__marquee-plus
+        .banner__marquee-text 200 BESPLATNIH VRTNJI
+        .banner__marquee-plus
+        .banner__marquee-text RISK-FREE BET 30 EUR (226,04kn)
+        .banner__marquee-plus
+        .banner__marquee-text 100% BONUSA NA PRVI DEPOZIT do 700 EUR (5274,15kn)
+        .banner__marquee-plus
+        .banner__marquee-text 200 BESPLATNIH VRTNJI
+        .banner__marquee-plus
+        .banner__marquee-text RISK-FREE BET 30 EUR (226,04kn)
+        .banner__marquee-plus
+        .banner__marquee-text 100% BONUSA NA PRVI DEPOZIT do 700 EUR (5274,15kn)
+        .banner__marquee-plus
+        .banner__marquee-text 200 BESPLATNIH VRTNJI
+        .banner__marquee-plus
+        .banner__marquee-text RISK-FREE BET 30 EUR (226,04kn)
+        .banner__marquee-plus
+        .banner__marquee-text 100% BONUSA NA PRVI DEPOZIT do 700 EUR (5274,15kn)
+        .banner__marquee-plus
+        .banner__marquee-text 200 BESPLATNIH VRTNJI
+        .banner__marquee-plus
+        .banner__marquee-text RISK-FREE BET 30 EUR (226,04kn)
+        .banner__marquee-plus
+        .banner__marquee-text 100% BONUSA NA PRVI DEPOZIT do 700 EUR (5274,15kn)
+        .banner__marquee-plus
+        .banner__marquee-text 200 BESPLATNIH VRTNJI
+        .banner__marquee-plus
+        .banner__marquee-text RISK-FREE BET 30 EUR (226,04kn)
+
+
+
 
 
 
