--- a/front/sass/fonts.sass
+++ b/front/sass/fonts.sass
@@ -1,3 +1,7 @@
+@font-face
+    font-family: 'SuisseIntl-Medium'
+    src: url(../fonts/SuisseIntl/SuisseIntl-SemiBold.woff)
+    font-weight: 500
 
 @font-face
     font-family: 'SuisseIntl-SemiBold'
